@@ -14,6 +14,7 @@ Version 1.6.3
 - CHG: Some small improvements to the status cache. (Stefan)
 - BUG: If a commit failed, TSVN could crash in case the svn library returned
        an empty error object. (Stefan)
+- BUG: The merge options to ignore whitespaces were ignored. (Stefan)
 
 Version 1.6.2
 - BUG: Error message about non-LF commit messages when using messages with
